@@ -14,7 +14,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: stat.c,v 1.74 2006/03/16 14:43:07 bzfpfend Exp $"
+#pragma ident "@(#) $Id: stat.c,v 1.75 2006/08/10 12:34:11 bzfpfend Exp $"
 
 /**@file   stat.c
  * @brief  methods for problem statistics
@@ -170,6 +170,7 @@ void SCIPstatReset(
    stat->nboundchgs = 0;
    stat->nholechgs = 0;
    stat->nruns = 0;
+   stat->nconfrestarts = 0;
    stat->nrootboundchgs = 0;
    stat->nrootintfixings = 0;
    stat->nvaridx = stat->marked_nvaridx;
